[tool.poetry]
name = "RL"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.17.0"
gym = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
